--- a/test/fixtures/messages.yml
+++ b/test/fixtures/messages.yml
@@ -2,17 +2,19 @@
 #
 # Table name: messages
 #
-#  id             :integer          not null, primary key
-#  user_id        :string(255)
-#  image          :string(255)
-#  language_from  :string(255)
-#  language_to    :string(255)
-#  input_text     :string(255)
-#  translation    :string(255)
-#  pronounciation :string(255)
-#  sound          :string(255)
-#  created_at     :datetime
-#  updated_at     :datetime
+#  id                  :integer          not null, primary key
+#  user_id             :integer
+#  game_id             :integer
+#  chat_id             :integer
+#  image               :string(255)
+#  language_from       :string(255)
+#  language_to         :string(255)
+#  input_text          :string(255)
+#  translation         :string(255)
+#  pronounciation_text :string(255)
+#  sound               :string(255)
+#  created_at          :datetime
+#  updated_at          :datetime
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
