--- a/test/fixtures/games.yml
+++ b/test/fixtures/games.yml
@@ -11,6 +11,7 @@
 #  stage            :integer
 #  created_at       :datetime
 #  updated_at       :datetime
+#  completed        :boolean          default(FALSE)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
